--- a/contacts.html
+++ b/contacts.html
@@ -265,8 +265,8 @@
                 return `
                     <tr class="contact-row" data-contact-id="${contactId}">
                         <td>${contact.firstName || ''} ${contact.lastName || ''}</td>
-                        <td>${contact.company || ''}</td>
-                        <td>${contact.title || ''}</td>
+                        <td>${contact.companyName || ''}</td>
+                        <td>${contact.jobTitle || ''}</td>
                         <td>${contact.email || ''}</td>
                         <td>${contact.phone || ''}</td>
                     </tr>
