--- a/register.html
+++ b/register.html
@@ -129,7 +129,7 @@
 
                 // Then try to register with main API
                 try {
-                    const mainApiResponse = await fetch('https://api.mixed-marketing-actions.ovh/register', {
+                    const mainApiResponse = await fetch('https://jgjndwsvn3.execute-api.eu-west-3.amazonaws.com/register', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
