--- a/api-keys.html
+++ b/api-keys.html
@@ -210,7 +210,7 @@
             }
 
             try {
-                const response = await fetch('https://api.mixed-marketing-actions.ovh/verify', {
+                const response = await fetch('https://jgjndwsvn3.execute-api.eu-west-3.amazonaws.com/verify', {
                     method: 'POST',
                     headers: {
                         'x-api-key': 'mV3xihTh7m9ypwEAvrsxmWDwghb52jD5nQfotH44',
@@ -268,7 +268,7 @@
                     parameters: []
                 };
 
-                const response = await fetch('https://api.mixed-marketing-actions.ovh/query', {
+                const response = await fetch('https://jgjndwsvn3.execute-api.eu-west-3.amazonaws.com/query', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
