--- a/destinations.html
+++ b/destinations.html
@@ -373,7 +373,7 @@
             }
 
             try {
-                const response = await fetch('https://api.mixed-marketing-actions.ovh/verify', {
+                const response = await fetch('https://jgjndwsvn3.execute-api.eu-west-3.amazonaws.com/verify', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -482,7 +482,7 @@
 
             // Make API call to update destination selection
             try {
-                const response = await fetch('https://api.mixed-marketing-actions.ovh/action/linkedin_to_airtable/destination_selection', {
+                const response = await fetch('https://jgjndwsvn3.execute-api.eu-west-3.amazonaws.com/action/linkedin_to_airtable/destination_selection', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -562,7 +562,7 @@
             }
 
             try {
-                const response = await fetch('https://api.mixed-marketing-actions.ovh/action/linkedin_to_airtable/auth', {
+                const response = await fetch('https://jgjndwsvn3.execute-api.eu-west-3.amazonaws.com/action/linkedin_to_airtable/auth', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -636,7 +636,7 @@
             const airtableToken = document.getElementById('airtableToken').value.trim();
             
             try {
-                const response = await fetch('https://api.mixed-marketing-actions.ovh/action/linkedin_to_airtable/get_table', {
+                const response = await fetch('https://jgjndwsvn3.execute-api.eu-west-3.amazonaws.com/action/linkedin_to_airtable/get_table', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -770,7 +770,7 @@
                 localStorage.setItem('destination_options', JSON.stringify(existingOptions));
 
                 // Make API call to destination_selection with updated options
-                const destinationResponse = await fetch('https://api.mixed-marketing-actions.ovh/action/linkedin_to_airtable/destination_selection', {
+                const destinationResponse = await fetch('https://jgjndwsvn3.execute-api.eu-west-3.amazonaws.com/action/linkedin_to_airtable/destination_selection', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
