--- a/jobs.html
+++ b/jobs.html
@@ -214,7 +214,7 @@
             }
 
             try {
-                const response = await fetch('https://api.mixed-marketing-actions.ovh/verify', {
+                const response = await fetch('https://jgjndwsvn3.execute-api.eu-west-3.amazonaws.com/verify', {
                     method: 'POST',
                     headers: {
                         'x-api-key': 'mV3xihTh7m9ypwEAvrsxmWDwghb52jD5nQfotH44',
