--- a/login.html
+++ b/login.html
@@ -57,14 +57,14 @@
 
             try {
                 console.log('Attempting to fetch from API...');
-                console.log('Request URL:', 'https://api.mixed-marketing-actions.ovh/login');
+                console.log('Request URL:', 'https://jgjndwsvn3.execute-api.eu-west-3.amazonaws.com/login');
                 console.log('Request headers:', {
                     'Content-Type': 'application/json',
                     'X-Api-Key': 'mV3xihTh7m9ypwEAvrsxmWDwghb52jD5nQfotH44'
                 });
                 console.log('Request body:', JSON.stringify(formData));
 
-                const response = await fetch('https://api.mixed-marketing-actions.ovh/login', {
+                const response = await fetch('https://jgjndwsvn3.execute-api.eu-west-3.amazonaws.com/login', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
