--- a/programmatic.html
+++ b/programmatic.html
@@ -318,7 +318,7 @@
                     }
                     
                     try {
-                        const verifyResponse = await fetch('https://api.mixed-marketing-actions.ovh/verify', {
+                        const verifyResponse = await fetch('https://jgjndwsvn3.execute-api.eu-west-3.amazonaws.com/verify', {
                             method: 'POST',
                             headers: {
                                 'x-api-key': 'mV3xihTh7m9ypwEAvrsxmWDwghb52jD5nQfotH44', 
