--- a/companies.html
+++ b/companies.html
@@ -193,7 +193,7 @@
 
     <script>
         const API_KEY = 'your-api-key';
-        const BASE_URL = 'https://api.precrm.fr/dynamodb';
+        const BASE_URL = 'https://3sit86nm7e.execute-api.eu-west-3.amazonaws.com/prod/dynamodb';
         let currentCompanyId = null;
 
         async function loadCompanies() {
