--- a/contacts.html
+++ b/contacts.html
@@ -246,7 +246,7 @@
             }
         });
 
-        const BASE_URL = 'https://api.precrm.fr/dynamodb';
+        const BASE_URL = 'https://3sit86nm7e.execute-api.eu-west-3.amazonaws.com/prod/dynamodb';
         let currentContactId = null;
 
         async function loadContacts() {
