--- a/jobs.html
+++ b/jobs.html
@@ -248,7 +248,7 @@
             }
         });
 
-        const BASE_URL = 'https://api.precrm.fr/dynamodb';
+        const BASE_URL = 'https://3sit86nm7e.execute-api.eu-west-3.amazonaws.com/prod/dynamodb';
         let currentJobId = null;
 
         // Define field mapping from UI to dynamoDB names based on verifications.json
