--- a/posts.html
+++ b/posts.html
@@ -230,7 +230,7 @@
             }
         });
 
-        const BASE_URL = 'https://api.precrm.fr/dynamodb';
+        const BASE_URL = 'https://3sit86nm7e.execute-api.eu-west-3.amazonaws.com/prod/dynamodb';
         let currentPostId = null;
 
         async function loadPosts() {
